--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -345,6 +345,9 @@ footer {
   div.gmap{
     display: none;
   }
+  .pro_img{
+    float: none;
+  }
 
   header, section, footer {
     float:none;
