--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -64,7 +64,7 @@
 
       <br>
 
-      <!-- <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p> -->
+
 
     </section>
     <footer>
@@ -77,7 +77,8 @@
         {% endif %}
         {% if site.google_scholar %}
         <a href="{{ site.google_scholar}}" target="_blank">
-          <i class="ai ai-google-scholar" style="font-size:1.6rem"></i>
+          <i class="ai ai-google-scholar"></i>
+          <!--style="font-size:1.6rem"-->
         </a>
         {% endif %}
         {% if site.github_link %}
@@ -91,7 +92,8 @@
       <br>
     </footer>
   </div>
-  <script src="{{ " /assets/js/scale.fix.js" | relative_url }}"></script>
+  <script src="./assets/js/scale.fix.js"></script>
+  <!-- <script src="{{ " ./assets/js/scale.fix.js" | relative_url }}"></script> -->
   {% if site.google_analytics %}
   <script>
     (function (i, s, o, g, r, a, m) {
