--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -4,14 +4,14 @@
 body {
   background-color: #fff;
   padding:0px;
-  font: 16.0px/1.5 'Open Sans'; 
+  font: 16.0px/1.5 'Open Sans';
   color:#000;
   font-weight:400;
   margin:0;
   // word-break:break-all;
 }
 
-.social-icons a{display:inline-block;height:3rem;width:3rem;background-color:#495057;color:#fff!important;border-radius:100%;text-align:center;font-size:1.5rem;line-height:3.1rem;margin-right:1rem}.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#000000}
+.social-icons a{display:inline-block;height:1.8rem;width:1.8rem;background-color:#495057;color:#fff!important;border-radius:100%;text-align:center;font-size:1.0rem;line-height:1.9rem;margin-right:1rem}.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#000000}
 
 autocolor{
   color:#494949;
@@ -104,7 +104,7 @@ papertitle {
 h1, h3, h4, h5, h6 {
   font-weight: 600;
   color:#043361;
-  margin:0 0 20px;
+  margin:0 0 10px;
 }
 
 h2 {
@@ -237,7 +237,7 @@ header {
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
-  padding-top:4.0em;
+  padding-top:2.0em;
   text-align:center
 }
 
@@ -311,7 +311,7 @@ header ul a strong {
 section {
   width:966px;
   float:right;
-  padding-top:10.0em;
+  padding-top:6.0em;
   padding-bottom:50px;
 }
 
@@ -327,10 +327,11 @@ hr {
 }
 
 footer {
-  width:220px;
+  width:280px;
   float:left;
   position:fixed;
-  bottom:30px;
+  // bottom:30px;
+  top: 28.5em;
   -webkit-font-smoothing:subpixel-antialiased;
   text-align:center;
 }
@@ -380,16 +381,16 @@ footer {
    .image.avatar img {
         border-radius: 100%;
         width: 117px;
-        padding:20px;
+        padding:10px;
       }
   #head1o2 {
     visibility: hidden;
   }
-      
+
   #head2o2 {
     visibility: hidden;
   }
-  
+
 }
 
 @media print, screen and (max-width: 960px) {
@@ -403,7 +404,7 @@ footer {
   }
 
   header ul, header p.view {
-    
+
   }
 
   pre, code {
@@ -432,7 +433,7 @@ footer {
   #head1o2 {
     visibility: hidden;
   }
-  
+
   #head2o2 {
     visibility: hidden;
   }
